TRIVIAL: Switch assertion style to Assert

--- a/.jscsrc
+++ b/.jscsrc
@@ -44,6 +44,7 @@
   "requireSpaceAfterLineComment": true,
   "disallowNewlineBeforeBlockStatements": true,
   "excludeFiles": [
+    "coverage",
     "node_modules"
   ]
 }
